--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,11 +1,10 @@
 // size
 $full-day-size: 100.55px;
-$day-size: 98px;
 $gap: 1px;
 $total-gaps: 6 * $gap;
 $days-per-row: 7;
 $padding: 10px;
-$calendar-width: ($day-size * $days-per-row) + $total-gaps + $padding  * 2;
+$calendar-width: ($full-day-size * $days-per-row) + $total-gaps + $padding  * 2;
 
 // weekday order
 $days:
