--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -16,186 +16,193 @@ body {
   padding-top: 50px;
   display: flex;
   flex-wrap: wrap;
-  width: 712px;
+  width: 729.85px;
 }
+
 .calendar__day {
-  width: 98px;
-  height: 98px;
+  width: 100.55px;
+  height: 100.55px;
   display: flex;
   flex-wrap: wrap;
-  box-sizing: content-box;
   background-color: #eee;
   border: 1px black solid;
   transition-duration: 0.5s;
+  align-items: center;
+  justify-content: center;
 }
+
 .calendar__day:hover {
   transform: translateY(-20px);
   cursor: pointer;
   background-color: pink;
 }
+
 .calendar__day:nth-child(1)::before {
   content: "1";
-  margin: auto;
 }
+
 .calendar__day:nth-child(2)::before {
   content: "2";
-  margin: auto;
 }
+
 .calendar__day:nth-child(3)::before {
   content: "3";
-  margin: auto;
 }
+
 .calendar__day:nth-child(4)::before {
   content: "4";
-  margin: auto;
 }
+
 .calendar__day:nth-child(5)::before {
   content: "5";
-  margin: auto;
 }
+
 .calendar__day:nth-child(6)::before {
   content: "6";
-  margin: auto;
 }
+
 .calendar__day:nth-child(7)::before {
   content: "7";
-  margin: auto;
 }
+
 .calendar__day:nth-child(8)::before {
   content: "8";
-  margin: auto;
 }
+
 .calendar__day:nth-child(9)::before {
   content: "9";
-  margin: auto;
 }
+
 .calendar__day:nth-child(10)::before {
   content: "10";
-  margin: auto;
 }
+
 .calendar__day:nth-child(11)::before {
   content: "11";
-  margin: auto;
 }
+
 .calendar__day:nth-child(12)::before {
   content: "12";
-  margin: auto;
 }
+
 .calendar__day:nth-child(13)::before {
   content: "13";
-  margin: auto;
 }
+
 .calendar__day:nth-child(14)::before {
   content: "14";
-  margin: auto;
 }
+
 .calendar__day:nth-child(15)::before {
   content: "15";
-  margin: auto;
 }
+
 .calendar__day:nth-child(16)::before {
   content: "16";
-  margin: auto;
 }
+
 .calendar__day:nth-child(17)::before {
   content: "17";
-  margin: auto;
 }
+
 .calendar__day:nth-child(18)::before {
   content: "18";
-  margin: auto;
 }
+
 .calendar__day:nth-child(19)::before {
   content: "19";
-  margin: auto;
 }
+
 .calendar__day:nth-child(20)::before {
   content: "20";
-  margin: auto;
 }
+
 .calendar__day:nth-child(21)::before {
   content: "21";
-  margin: auto;
 }
+
 .calendar__day:nth-child(22)::before {
   content: "22";
-  margin: auto;
 }
+
 .calendar__day:nth-child(23)::before {
   content: "23";
-  margin: auto;
 }
+
 .calendar__day:nth-child(24)::before {
   content: "24";
-  margin: auto;
 }
+
 .calendar__day:nth-child(25)::before {
   content: "25";
-  margin: auto;
 }
+
 .calendar__day:nth-child(26)::before {
   content: "26";
-  margin: auto;
 }
+
 .calendar__day:nth-child(27)::before {
   content: "27";
-  margin: auto;
 }
+
 .calendar__day:nth-child(28)::before {
   content: "28";
-  margin: auto;
 }
+
 .calendar__day:nth-child(29)::before {
   content: "29";
-  margin: auto;
 }
+
 .calendar__day:nth-child(30)::before {
   content: "30";
-  margin: auto;
 }
+
 .calendar__day:nth-child(31)::before {
   content: "31";
-  margin: auto;
 }
+
 .calendar--month-length--28__day:nth-child(n+29) {
   display: none;
 }
+
 .calendar--month-length--29__day:nth-child(n+30) {
   display: none;
 }
+
 .calendar--month-length--30__day:nth-child(n+31) {
   display: none;
 }
+
 .calendar--month-length--31__day:nth-child(n+32) {
   display: none;
 }
 
 .calendar--start-day--mon .calendar__day:first-child {
-  margin-left: 0px;
+  margin-left: 0;
 }
 
 .calendar--start-day--tue .calendar__day:first-child {
-  margin-left: 100.55px;
+  margin-left: 101.55px;
 }
 
 .calendar--start-day--wed .calendar__day:first-child {
-  margin-left: 201.1px;
+  margin-left: 203.1px;
 }
 
 .calendar--start-day--thu .calendar__day:first-child {
-  margin-left: 301.65px;
+  margin-left: 304.65px;
 }
 
 .calendar--start-day--fri .calendar__day:first-child {
-  margin-left: 402.2px;
+  margin-left: 406.2px;
 }
 
 .calendar--start-day--sat .calendar__day:first-child {
-  margin-left: 502.75px;
+  margin-left: 507.75px;
 }
 
 .calendar--start-day--sun .calendar__day:first-child {
-  margin-left: 603.3px;
+  margin-left: 609.3px;
 }
 
 /*# sourceMappingURL=main.css.map */
