--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,18 +1,12 @@
-$gap_size: 1px;
-$cell_size: 100px;
-$col_count: 7;
-$days_count: 31;
-$week:
-  "mon" 0,
-  "tue" 1,
-  "wed" 2,
-  "thu" 3,
-  "fri" 4,
-  "sat" 5,
-  "sun" 6;
+@import './utils/variables';
 
 html {
   font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+}
+
+* {
+  box-sizing: border-box;
 }
 
 body {
@@ -33,7 +27,7 @@ body {
 
   gap: $gap-size;
   padding: 10px;
-  width: $col_count * ($cell_size + $gap_size);
+  width: $col_count * ($cell_size + $gap_size) + 20px;
 
   @for $monthLength from 28 through 31 {
     &--length_#{$monthLength} {
@@ -54,22 +48,19 @@ body {
     align-items: center;
     justify-content: center;
 
-    box-sizing: border-box;
     height: $cell-size;
     width: $cell-size;
 
-    font-size: 30px;
-
-    background-color: #eee;
-    border: 1px black solid;
+    background-color: $c-grey;
+    border: 1px $c-black solid;
 
     cursor: pointer;
 
     &:hover {
-      background-color: #ffc0cb;
+      background-color: $c-pink;
 
       transform: translateY(-20px);
-      transition: 0.5s;
+      transition: 0.3s;
     }
 
     @for $date from 1 through $days_count {
