--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,4 @@
-@import './utils/variables';
+@import "./utils/variables";
 
 html {
   font-family: Arial, Helvetica, sans-serif;
@@ -26,8 +26,8 @@ body {
   flex-wrap: wrap;
 
   gap: $gap-size;
-  padding: 10px;
-  width: $col_count * ($cell_size + $gap_size) + 20px;
+  padding: $content-padding;
+  width: $col_count * ($cell_size + $gap_size) + ($content-padding * 2);
 
   @for $monthLength from 28 through 31 {
     &--length_#{$monthLength} {
