--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,76 @@
+$cell-size: 100px;
+$gap: 1px;
+$cells-in-row: 7;
+$padding: 10px;
+
+$cell-color: #eee;
+$cell-color-hover: 	#ffb6c1;
+
+* {
+  box-sizing: border-box;
+}
+
+html {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 body {
   margin: 0;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  gap: $gap;
+  width: ($cells-in-row * $cell-size) + ($cells-in-row * $gap) + (2 * $padding);
+
+  $days-of-the-week:
+    "tue" $cell-size + $gap,
+    "wed" ($cell-size + $gap) * 2,
+    "thu" ($cell-size + $gap) * 3,
+    "fri" ($cell-size + $gap) * 4,
+    "sat" ($cell-size + $gap) * 5,
+    "sun" ($cell-size + $gap) * 6;
+
+  @each $day, $shift in $days-of-the-week {
+    &--start-day-#{$day} &__day:first-child {
+      margin-left: $shift;
+    }
+  }
+
+  @for $day from 1 through 31 {
+    &--month-length-#{$day} &__day:nth-child(n + #{$day + 1}) {
+      display: none;
+    }
+  }
+
+  &__day {
+    min-width: $cell-size;
+    height: $cell-size;
+    text-align: center;
+    line-height: $cell-size;
+    font-size: 30px;
+    background-color: $cell-color;
+    border: 1px solid #000;
+    transition: all 0.5s;
+    cursor: pointer;
+
+    &:hover {
+      transform: translateY(-20px);
+      background-color: $cell-color-hover;
+    }
+
+    @for $i from 1 through 31 {
+      &:nth-child(#{$i})::before {
+        content: "#{$i}";
+      }
+    }
+  }
 }
