Hopefully last calendar

--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -30,7 +30,7 @@
 
   @for $month-day-count from 28 through 31 {
     &--month-length--#{$month-day-count} {
-      &__day:nth-child(n + #{$month-day-count + 1}) {
+      :nth-child(n + #{$month-day-count + 1}) {
         display: none;
       }
     }
