fix font, indent, columns

--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -1,10 +1,10 @@
 .calendar {
-  margin: auto;
+  margin: 50px auto;
   display: flex;
   flex-wrap: wrap;
   font-size: $font-size;
   gap: $gap;
-  max-width: (7 * $cell-size) + (7 * $gap) + (2 * $padding);
+  width: (7 * $cell-size) + (7 * $gap) + (2 * $padding);
 
   &__day {
     box-sizing: border-box;
