layout_calendar solution amendments

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,9 +10,12 @@ body {
   display: flex;
   gap: $gap;
   flex-wrap: wrap;
-  margin: 0 auto;
   padding: $padding;
   width: $calendar-size;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 
   &__day {
     box-sizing: border-box;
