--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,5 @@
+@import "./variables";
+
 * {
   box-sizing: border-box;
 }
@@ -16,46 +18,39 @@ body {
   padding: 10px;
   transition: transform 0.5s;
 
-  @for $month-length from 1 through 4 {
-    &--#{$month-length} :nth-last-child(n + #{$month-length}) {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100px;
-      width: 100px;
-      background-color: #eee;
-      border: 1px solid black;
+  &__day {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100px;
+    width: 100px;
+    background-color: #eee;
+    border: 1px solid black;
+
+    @for $row from 1 through 31 {
+      &-#{$row}::before {
+        content: "#{$row}";
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 30px;
+      }
     }
 
-    &__day {
-      @for $row from 1 through 29 {
-        &--#{$row}::before {
-          content: "#{$row}";
-          font-family: Arial, Helvetica, sans-serif;
-          font-size: 30px;
-        }
-      }
+    &:hover {
+      cursor: pointer;
+      background-color: pink;
+      transform: translate(0, -20px);
+    }
 
-      $start-days:
-        "mon" 0,
-        "tue" 101px,
-        "wed" 202px,
-        "thu" 303px,
-        "fri" 404px,
-        "sat" 505px,
-        "sun" 606px;
-
-      @each $name, $start-day in $start-days {
-        &--#{$name} {
-          margin-left: $start-day;
-        }
+    @each $name, $start-day in $start-days {
+      &--#{$name} {
+        margin-left: $start-day;
       }
+    }
+  }
 
-      &:hover {
-        cursor: pointer;
-        background-color: pink;
-        transform: translate(0, -20px);
-      }
+  @for $month-length from 29 through 32 {
+    &--#{$month-length} :nth-child(n + #{$month-length}) {
+      display: none;
     }
   }
 }
