--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -26,7 +26,7 @@ body {
   }
 
   @for $month-length from 29 through 31 {
-    .calendar_day:nth-child(#{$month-length}) {
+    &--#{$month-length} :nth-child(n + #{$month-length}):not(:nth-child(#{$month-length})) {
       display: none;
     }
   }
@@ -34,14 +34,14 @@ body {
   $start-days:
     "mon" 0*$cell-size+$gap,
     "tue" 1*$cell-size+$gap,
-    "wed" 2*$cell-size+$gap,
-    "thu" 3*$cell-size+$gap,
-    "fri" 4*$cell-size+$gap,
-    "sat" 5*$cell-size+$gap,
-    "sun" 6*$cell-size+$gap;
+    "wed" 2*$cell-size + 2*$gap,
+    "thu" 3*$cell-size + 3*$gap,
+    "fri" 4*$cell-size + 4*$gap,
+    "sat" 5*$cell-size + 5*$gap,
+    "sun" 6*$cell-size + 6*$gap;
 
   @each $start-day, $margin in $start-days {
-    &_day--#{$start-day} {
+    &--start-day--#{$start-day} :first-child {
       margin-left: $margin;
     }
   }
