updated task solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -26,7 +26,7 @@ body {
   }
 
   @for $month-length from 29 through 31 {
-    &--#{$month-length} :nth-child(n + #{$month-length}):not(:nth-child(#{$month-length})) {
+    &--#{$month-length} :nth-child(n + #{$month-length}) {
       display: none;
     }
   }
