--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,3 +1,13 @@
-$size-box: 100px;
-$gap-box: 1px;
-$days: "mon" 0, "tue" 1, "wed" 2, "thu" 3, "fri" 4, "sat" 5, "sun" 6;
+$day_cell: 100px;
+$day_background: #eee;
+$border_black: #000;
+$background_pink: pink;
+$start_day: (
+  mon: 0,
+  tue: 101px,
+  wed: 202px,
+  thu: 303px,
+  fri: 404px,
+  sat: 505px,
+  sun: 606px
+);
