completed the task

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,63 @@
+$heDay: 100px;
+$wiDay: 100px;
+$paMonth: 10px;
+$gapDay: 1px;
+
 body {
   margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  gap: #{$gapDay};
+  padding: #{$paMonth};
+  width: $wiDay * 7 + $gapDay * 6;
+
+  &__day {
+    height: #{$heDay};
+    width: #{$wiDay};
+    background-color: #eee;
+    border: 1px solid black;
+    box-sizing: border-box;
+    position: relative;
+
+    &:hover {
+      cursor: pointer;
+      background-color: pink;
+      transition: transform 0.5s;
+      transform: translateY(-20px);
+    }
+  }
+
+  @for $date from 1 through 31 {
+    & > :nth-child(n+#{$date})::before {
+      content: "#{$date}";
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: 30px;
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+    }
+  }
+
+  $dayOfWeek: mon 0, tue 1, wed 2, thu 3, fri 4, sat 5, sun 6;
+
+  @each $startDay, $numberWeek in $dayOfWeek {
+    &--start-day-#{$startDay} > :nth-child(1) {
+      margin-left: ($wiDay+$gapDay)*$numberWeek;
+    }
+  }
+
+  @for $monthLenght from 0 through 31 {
+    &--month-length-#{$monthLenght} > :nth-child(n + #{$monthLenght+1}) {
+      display: none;
+    }
+  }
 }
