--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,5 @@
-body {
-  margin: 0;
-}
+@import "./utils/_variables";
+
+@import "./blocks/_body";
+@import "./blocks/_content";
+@import "./blocks/_calendar";
