--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -5,150 +5,187 @@ body {
   font-size: 30px;
 }
 
-.calendar {
+.calendar,
+.calendar__row-block {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
+}
+
+.calendar {
   height: 100vh;
 }
 
-.calendar__block {
+.calendar__row {
   display: flex;
-  justify-content: flex-end;
+  flex-wrap: wrap;
   width: 750px;
-  height: 101px;
 }
 
-.block {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.calendar__row-block {
+  box-sizing: border-box;
   width: 100px;
   height: 100px;
   background-color: #eee;
-  border: 1px solid black;
-  transition: transform 0.5s ease;
+  border: 1px solid #000;
+  transition: 0.5s ease;
 }
 
-.block:hover {
+.calendar__row-block:hover {
   transform: translateY(-20px);
+  background-color: #ffc0cb;
 }
 
-.block--1::before {
+.calendar__row-block:nth-child(1)::before {
   content: "1";
 }
 
-.block--2::before {
+.calendar__row-block:nth-child(2)::before {
   content: "2";
 }
 
-.block--3::before {
+.calendar__row-block:nth-child(3)::before {
   content: "3";
 }
 
-.block--4::before {
+.calendar__row-block:nth-child(4)::before {
   content: "4";
 }
 
-.block--5::before {
+.calendar__row-block:nth-child(5)::before {
   content: "5";
 }
 
-.block--6::before {
+.calendar__row-block:nth-child(6)::before {
   content: "6";
 }
 
-.block--7::before {
+.calendar__row-block:nth-child(7)::before {
   content: "7";
 }
 
-.block--8::before {
+.calendar__row-block:nth-child(8)::before {
   content: "8";
 }
 
-.block--9::before {
+.calendar__row-block:nth-child(9)::before {
   content: "9";
 }
 
-.block--10::before {
+.calendar__row-block:nth-child(10)::before {
   content: "10";
 }
 
-.block--11::before {
+.calendar__row-block:nth-child(11)::before {
   content: "11";
 }
 
-.block--12::before {
+.calendar__row-block:nth-child(12)::before {
   content: "12";
 }
 
-.block--13::before {
+.calendar__row-block:nth-child(13)::before {
   content: "13";
 }
 
-.block--14::before {
+.calendar__row-block:nth-child(14)::before {
   content: "14";
 }
 
-.block--15::before {
+.calendar__row-block:nth-child(15)::before {
   content: "15";
 }
 
-.block--16::before {
+.calendar__row-block:nth-child(16)::before {
   content: "16";
 }
 
-.block--17::before {
+.calendar__row-block:nth-child(17)::before {
   content: "17";
 }
 
-.block--18::before {
+.calendar__row-block:nth-child(18)::before {
   content: "18";
 }
 
-.block--19::before {
+.calendar__row-block:nth-child(19)::before {
   content: "19";
 }
 
-.block--20::before {
+.calendar__row-block:nth-child(20)::before {
   content: "20";
 }
 
-.block--21::before {
+.calendar__row-block:nth-child(21)::before {
   content: "21";
 }
 
-.block--22::before {
+.calendar__row-block:nth-child(22)::before {
   content: "22";
 }
 
-.block--23::before {
+.calendar__row-block:nth-child(23)::before {
   content: "23";
 }
 
-.block--24::before {
+.calendar__row-block:nth-child(24)::before {
   content: "24";
 }
 
-.block--25::before {
+.calendar__row-block:nth-child(25)::before {
   content: "25";
 }
 
-.block--26::before {
+.calendar__row-block:nth-child(26)::before {
   content: "26";
 }
 
-.block--27::before {
+.calendar__row-block:nth-child(27)::before {
   content: "27";
 }
 
-.block--28::before {
+.calendar__row-block:nth-child(28)::before {
   content: "28";
 }
 
-.block--29::before {
+.calendar__row-block:nth-child(29)::before {
   content: "29";
+}
+
+.calendar__row-block:nth-child(30)::before {
+  content: "30";
+}
+
+.calendar__row-block:nth-child(31)::before {
+  content: "31";
+}
+
+.calendar__row-block--mon {
+  margin-left: 100px;
+}
+
+.calendar__row-block--tue {
+  margin-left: 200px;
+}
+
+.calendar__row-block--wed {
+  margin-left: 200px;
+}
+
+.calendar__row-block--thu {
+  margin-left: 300px;
+}
+
+.calendar__row-block--fri {
+  margin-left: 400px;
+}
+
+.calendar__row-block--sat {
+  margin-left: 500px;
+}
+
+.calendar__row-block--sun {
+  margin-left: 600px;
 }
 
 /*# sourceMappingURL=styles.css.map */
