--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,65 @@
-body {
+* {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  font-family: Arial, sans-serif;
+  font-size: 30px;
+}
+
+$main-bg-color:#eee;
+$hover-bg-color: #f5c2cb;
+$cell-size: 100px;
+$cell-gap: 1px;
+$padding-size: 10px;
+
+// $days: (
+
+// )
+
+// @each $name, $glyph in $icons {
+//   .icon-#{$name}:before {
+//     display: inline-block;
+//     font-family: "Icon Font";
+//     content: $glyph;
+//   }
+// }
+
+.calendar {
+  width: ($cell-size * 7) + ($cell-gap * 6) + ($padding-size * 2);
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1px;
+  padding: $padding-size;
+
+  @for $i from 1 through 31 {
+    :nth-child(#{$i})::before {
+      content: "#{$i}";
+    }
+  }
+
+  &__day {
+    width: $cell-size;
+    height: $cell-size;
+    border: 1px solid #000;
+    background-color: $main-bg-color;
+    line-height: $cell-size;
+    text-align: center;
+    // display: flex;
+    // justify-content: center;
+    // align-items: center;
+    cursor: pointer;
+    transition: transform 0.5s ease-out;
+
+    &:hover {
+      transform: translateY(-20px);
+      background-color: $hover-bg-color;
+    }
+  }
 }
