--- a/src/styles/blocks/_calendar.scss
+++ b/src/styles/blocks/_calendar.scss
@@ -35,10 +35,13 @@
     @for $i from 1 through 31 {
       &:nth-child(#{$i})::before {
         content: " #{$i}";
-        font-family: Arial, Helvetica, sans-serif;
-        font-size: 30px;
-        color: $color-black;
       }
+    }
+
+    &::before {
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: 30px;
+      color: $color-black;
     }
 
     // transforming elements on hover
