--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,5 @@
-body {
-  margin: 0;
-}
+@import "partials/reset";
+@import "partials/variables";
+@import "partials/mixins";
+@import "blocks/wrapper";
+@import "blocks/_calendar";
