--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,61 +1,52 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+@import "./utils/variables";
+@import "./utils/reset";
 
 body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   height: 100vh;
-  font-family: Arial, sans-serif;
-  font-size: 30px;
+  @extend %flex-center;
 }
 
-$main-bg-color:#eee;
-$hover-bg-color: #f5c2cb;
-$cell-size: 100px;
-$cell-gap: 1px;
-$padding-size: 10px;
-
-// $days: (
-
-// )
-
-// @each $name, $glyph in $icons {
-//   .icon-#{$name}:before {
-//     display: inline-block;
-//     font-family: "Icon Font";
-//     content: $glyph;
-//   }
-// }
-
 .calendar {
-  width: ($cell-size * 7) + ($cell-gap * 6) + ($padding-size * 2);
   display: flex;
   flex-wrap: wrap;
-  gap: 1px;
+  width: (7 * $cell-size) + ( 6 * $cell-gap) + (2 * $padding-size);
+  gap: $cell-gap;
   padding: $padding-size;
 
   @for $i from 1 through 31 {
     :nth-child(#{$i})::before {
       content: "#{$i}";
+      font-family: $font-arial;
+      font-size: $font-numbers;
+    }
+  }
+
+  @each $day, $margin in $days {
+    &--start-day-#{$day} {
+      :first-child {
+        margin-left: #{$margin};
+      }
+    }
+  }
+
+  @for $i from 28 through 31 {
+    &--month-length-#{$i} {
+      :nth-child(n + #{$i + 1}) {
+        display: none;
+      }
     }
   }
 
   &__day {
     width: $cell-size;
     height: $cell-size;
-    border: 1px solid #000;
-    background-color: $main-bg-color;
+    font-size: $font-numbers;
     line-height: $cell-size;
     text-align: center;
-    // display: flex;
-    // justify-content: center;
-    // align-items: center;
+    border: 1px solid #000;
+    background-color: $main-bg-color;
     cursor: pointer;
-    transition: transform 0.5s ease-out;
+    transition: transform $duration ease-out;
 
     &:hover {
       transform: translateY(-20px);
