moved variable to utils

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,7 +9,7 @@ body {
 .calendar {
   display: flex;
   flex-wrap: wrap;
-  width: (7 * $cell-size) + ( 6 * $cell-gap) + (2 * $padding-size);
+  width: $calendar-width;
   gap: $cell-gap;
   padding: $padding-size;
 
