--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -9,8 +9,9 @@ $hover-bg-color: #f5c2cb;
 $cell-size: 100px;
 $cell-gap: 1px;
 $padding-size: 10px;
+$calendar-width: (7 * $cell-size) + ( 6 * $cell-gap) + (2 * $padding-size);
 $cell-margin: $cell-size + $cell-gap;
-$font-arial: "Arial", sans-serif;
+$font-arial: "", sans-serif;
 $font-numbers: 30px;
 $duration: 0.5s;
 
