Added loop for first day margin, cleaned up

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,5 @@
-@import "./utils/_variables";
+@import "./utils/variables";
 
-@import "./blocks/_body";
-@import "./blocks/_content";
-@import "./blocks/_calendar";
+@import "./blocks/body";
+@import "./blocks/content";
+@import "./blocks/calendar";
