--- a/src/styles/blocks/_calendar.scss
+++ b/src/styles/blocks/_calendar.scss
@@ -1,9 +1,8 @@
 .calendar {
-
   display: flex;
-  gap: $gap-size;
-  width: $calendar-width;
   flex-wrap: wrap;
+  width: $calendar-width;
+  gap: $gap-size;
   padding: 10px;
 
   &__day {
@@ -27,16 +26,16 @@
     &:hover {
       cursor: pointer;
       background-color: pink;
-
       transform: translateY(-20px);
       transition-duration: 0.5s;
     }
   }
 
-  @each $day, $margin in $days {
-    &--start-day_#{$day} {
+  @for $d from 1 through 7 {
+    $weekday: nth($days, $d);
+    &--start-day_#{$weekday} {
       .calendar__day:first-child {
-        margin-left: $margin;
+        margin-left: (($d - 1) * ($day-size + $gap-size));
       }
     }
   }
