--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -1,12 +1,5 @@
 $day-size: 100px;
 $day-color: #eee;
 $gap-size: 1px;
-$days:
-  "mon" 0,
-  "tue" $day-size,
-  "wed" (2 * ($day-size + $gap-size)),
-  "thu" (3 * ($day-size + $gap-size)),
-  "fri" (4 * ($day-size + $gap-size)),
-  "sat" (5 * ($day-size + $gap-size)),
-  "sun" (6 * ($day-size + $gap-size));
+$days: mon tue wed thu fri sat sun;
 $calendar-width: ($day-size * 7) + ($gap-size * 6);
