--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,57 @@
+@import "./utils/variables";
+
 body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin: 0;
+}
+
+.calendar {
+  display: flex;
+  justify-content: flex-start;
+  list-style: none;
+  align-content: center;
+  flex-wrap: wrap;
+  gap: $gap;
+  width: $calendarSize;
+  padding: 10px;
+
+  &__day {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: $cellSize;
+    height: $cellSize;
+    border: 1px solid black;
+    background-color: #eee;
+    box-sizing: border-box;
+    cursor: pointer;
+    transition: 0.5s;
+
+    @for $dayNumber from 1 through 31 {
+      &:nth-child(#{$dayNumber}):before {
+        content: "#{$dayNumber}";
+        font-size: 30px;
+        font-family: "Arial", sans-serif;
+      }
+    }
+
+    &:hover {
+      background-color: pink;
+      transform: translateY(-20px);
+    }
+  }
+
+  @each $length in $monthLengths {
+    &--month-length--#{$length} :not(:nth-child(-n + #{$length})) {
+      display: none;
+    }
+  }
+
+  @each $day, $margin in $startDays {
+    &--start-day--#{$day} :first-child {
+      margin-left: #{$margin};
+    }
+  }
 }
