add changing modificator

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -54,4 +54,10 @@ body {
       margin-left: ($width+$gap)*$numberWeek;
     }
   }
+
+  @for $monthLenght from 0 through 31 {
+    &--month-length-#{$monthLenght} > :nth-child(n + #{$monthLenght+1}) {
+      display: none;
+    }
+  }
 }
