final task solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -25,8 +25,8 @@ body {
     }
   }
 
-  @for $month-length from 29 through 31 {
-    &--#{$month-length} :nth-child(n + #{$month-length}) {
+  @for $days from 29 through 31 {
+    &--#{$days} :nth-child(n + #{$days}):not(:nth-child(#{$days})) {
       display: none;
     }
   }
