--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,6 +6,16 @@ body {
   align-items: center;
   margin: 0;
 }
+html {
+  @for $dayNumber from 1 through 31 {
+    &:nth-child(#{$dayNumber}):before {
+      content: "#{$dayNumber}";
+      font-size: 30px;
+      font-family: "Arial", sans-serif;
+    }
+  }
+
+}
 
 .calendar {
   display: flex;
@@ -32,8 +42,6 @@ body {
     @for $dayNumber from 1 through 31 {
       &:nth-child(#{$dayNumber}):before {
         content: "#{$dayNumber}";
-        font-size: 30px;
-        font-family: "Arial", sans-serif;
       }
     }
 
