--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -18,14 +18,21 @@ html {
 }
 
 .calendar {
-  display: flex;
-  justify-content: flex-start;
-  list-style: none;
-  align-content: center;
-  flex-wrap: wrap;
-  gap: $gap;
-  width: $calendarSize;
-  padding: 10px;
+  @for $dayNumber from 1 through 31 {
+    &:nth-child(#{$dayNumber}):before {
+      content: "#{$dayNumber}";
+      font-size: 30px;
+      font-family: "Arial", sans-serif;
+      display: flex;
+      justify-content: flex-start;
+      list-style: none;
+      align-content: center;
+      flex-wrap: wrap;
+      gap: $gap;
+      width: $calendarSize;
+      padding: 10px;
+    }
+  }
 
   &__day {
     display: flex;
