--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -39,6 +39,7 @@ body {
     @for $dayNumber from 1 through 31 {
       &:nth-child(#{$dayNumber}):before {
         content: "#{$dayNumber}";
+        font-size: 30px;
       }
     }
 
