--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -35,6 +35,7 @@ body {
     box-sizing: border-box;
     cursor: pointer;
     transition: 0.5s;
+    font-size: 30px;
 
     @for $dayNumber from 1 through 31 {
       &:nth-child(#{$dayNumber}):before {
