--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,11 +7,15 @@ body {
   margin: 0;
 }
 
+html {
+        &:nth-child(#{$dayNumber}):before {
+        content: "#{$dayNumber}";
+        font-size: 30px;
+        font-family: "Arial", sans-serif;
+  }
+}
+
 .calendar {
-  @for $dayNumber from 1 through 31 {
-    &:nth-child(#{$dayNumber}):before {
-      content: "#{$dayNumber}";
-      font-size: 30px;
       font-family: "Arial", sans-serif;
       display: flex;
       justify-content: flex-start;
@@ -35,7 +39,6 @@ body {
     box-sizing: border-box;
     cursor: pointer;
     transition: 0.5s;
-    font-size: 30px;
 
     @for $dayNumber from 1 through 31 {
       &:nth-child(#{$dayNumber}):before {
