--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,14 @@
 @import "variables.scss";
 
+* {
+  background-color: #eee;
+}
+
+html {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -19,7 +28,6 @@ body {
   &__day {
     height: #{$height};
     width: #{$width};
-    background-color: #eee;
     border: 1px solid black;
     box-sizing: border-box;
     position: relative;
@@ -35,8 +43,6 @@ body {
   @for $date from 0 through 31 {
     :nth-child(n+#{$date})::before {
       content: "#{$date}";
-      font-family: Arial, Helvetica, sans-serif;
-      font-size: 30px;
       position: absolute;
       left: 50%;
       top: 50%;
@@ -51,7 +57,7 @@ body {
   }
 
   @for $monthLength from 28 through 31 {
-    &--month-length-#{$monthLenght} > :nth-child(n + #{$monthLenght+1}) {
+    &--month-length-#{$monthLength} > :nth-child(n + #{$monthLength+1}) {
       display: none;
     }
   }
