--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,39 @@
 body {
   margin: 0;
 }
+
+img {
+  width: 50%;
+}
+
+.calendar {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 780px;
+  height: 610px;
+}
+
+.calendar__day {
+  background-color: #eee;
+  border: 1px solid black;
+  width: 98px;
+  height: 98px;
+  margin: 0 1px 1px 0;
+}
+
+.calendar .calendar__day:nth-child(n+7):nth-child(-n+37) {
+  background-color: pink;
+}
+
+.calendar .calendar__day:nth-child(n+1):nth-child(-n+6) {
+  background-color: white;
+  border: 1px solid white;
+}
+// .calendar__week-day::after {
+//   content: "1";
+// }
+.calendar .calendar__day:nth-child(n+37):nth-child(-n+42) {
+  background-color: white;
+  border: 1px solid white;
+}
