--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,7 @@
 @import "variables.scss";
 
 * {
-  background-color: #eee;
+  box-sizing: border-box;
 }
 
 html {
@@ -23,13 +23,13 @@ body {
   flex-wrap: wrap;
   gap: #{$gap};
   padding: #{$padding};
-  width: $width * 7 + $gap * 6;
+  width: $width * 7 + $gap * 6 + 2 * $padding;
 
   &__day {
     height: #{$height};
     width: #{$width};
     border: 1px solid black;
-    box-sizing: border-box;
+    background-color: #eee;
     position: relative;
     transition: transform 0.5s;
 
