--- a/src/styles/utils/vars.scss
+++ b/src/styles/utils/vars.scss
@@ -1,6 +1,7 @@
 $cell-size: 100px;
 $cols-number: 7;
 $gap: 1px;
+
 $week-days:
   mon 0,
   tue 1,
@@ -9,3 +10,7 @@ $week-days:
   fri 4,
   sat 5,
   sun 6;
+
+$color-bc-gray: #eee;
+$color-main-black: black;
+$color-active-pink: pink;
