calendar was moved to the center of the page

--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -4,6 +4,7 @@
   flex-wrap: wrap;
   padding: 10px;
   width: $cols-number * $cell-size + $gap * ($cols-number - 1);
+  margin: 0 auto;
 
   @for $i from 28 through 31 {
     &--month-length-#{$i} :nth-child(#{$i}) ~ * {
