add task solution

--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -3,38 +3,35 @@
 @use "../utils/placeholders";
 
 .calendar {
-  @extend %center;
-  height: 100vh;
+  display: flex;
+  flex-wrap: wrap;
+  width: calendarSize($calendar-day-square, $calendar-margin);
+  margin: auto;
+  gap: $calendar-margin;
 
-  &__row {
-    display: flex;
-    flex-wrap: wrap;
-    width: 750px;
+  &__day {
+    @extend %center;
+    box-sizing: border-box;
+    width: $calendar-day-square;
+    height: $calendar-day-square;
+    background-color: $calendar-day-color;
+    border: 1px solid #000;
+    transition: 0.5s ease;
 
-    &-block {
-      @extend %center;
-      box-sizing: border-box;
-      width: $calendar-block-square;
-      height: $calendar-block-square;
-      background-color: $calendar-block-color;
-      border: 1px solid #000;
-      transition: 0.5s ease;
+    &:hover {
+      transform: translateY(-20px);
+      background-color: #ffc0cb;
+    }
 
-      &:hover {
-        transform: translateY(-20px);
-        background-color: #ffc0cb;
+    @for $i from 1 through $calendar-lenght {
+      &:nth-child(#{$i})::before {
+        content: "#{$i}";
       }
+    }
 
-      @for $i from 1 through $calendar-lenght {
-        &:nth-child(#{$i})::before {
-          content: "#{$i}";
-        }
-      }
-
-      @each $day, $margin in $start-day {
-        &--#{$day} {
-          margin-left: getMargin($margin);
-        }
+    @each $day, $margin in $start-day {
+      &--#{$day} {
+        margin-left: getMargin($margin, $calendar-day-square);
       }
     }
   }
