--- a/src/styles/utils/_functions.scss
+++ b/src/styles/utils/_functions.scss
@@ -1,3 +1,7 @@
-@function getMargin($number) {
-  @return $number * 100px;
+@function getMargin($margin, $size) {
+  @return $margin + ($margin * $size);
+}
+
+@function calendarSize($size, $margin) {
+  @return ($size + $margin) * 7;
 }
