--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,2 +1,8 @@
-@use "./blocks/body.scss";
 @use "./blocks/calendar.scss";
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Arial", sans-serif;
+  font-size: 30px;
+}
