--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,28 +1,7 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: "Arial", sans-serif;
-  font-size: 30px;
-}
-
-.calendar,
-.calendar__row-block {
+.calendar__day {
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.calendar {
-  height: 100vh;
-}
-
-.calendar__row {
-  display: flex;
-  flex-wrap: wrap;
-  width: 750px;
-}
-
-.calendar__row-block {
   box-sizing: border-box;
   width: 100px;
   height: 100px;
@@ -31,161 +10,176 @@ body {
   transition: 0.5s ease;
 }
 
-.calendar__row-block:hover {
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  width: 707px;
+  margin: auto;
+  gap: 1px;
+}
+
+.calendar__day:hover {
   transform: translateY(-20px);
   background-color: #ffc0cb;
 }
 
-.calendar__row-block:nth-child(1)::before {
+.calendar__day:nth-child(1)::before {
   content: "1";
 }
 
-.calendar__row-block:nth-child(2)::before {
+.calendar__day:nth-child(2)::before {
   content: "2";
 }
 
-.calendar__row-block:nth-child(3)::before {
+.calendar__day:nth-child(3)::before {
   content: "3";
 }
 
-.calendar__row-block:nth-child(4)::before {
+.calendar__day:nth-child(4)::before {
   content: "4";
 }
 
-.calendar__row-block:nth-child(5)::before {
+.calendar__day:nth-child(5)::before {
   content: "5";
 }
 
-.calendar__row-block:nth-child(6)::before {
+.calendar__day:nth-child(6)::before {
   content: "6";
 }
 
-.calendar__row-block:nth-child(7)::before {
+.calendar__day:nth-child(7)::before {
   content: "7";
 }
 
-.calendar__row-block:nth-child(8)::before {
+.calendar__day:nth-child(8)::before {
   content: "8";
 }
 
-.calendar__row-block:nth-child(9)::before {
+.calendar__day:nth-child(9)::before {
   content: "9";
 }
 
-.calendar__row-block:nth-child(10)::before {
+.calendar__day:nth-child(10)::before {
   content: "10";
 }
 
-.calendar__row-block:nth-child(11)::before {
+.calendar__day:nth-child(11)::before {
   content: "11";
 }
 
-.calendar__row-block:nth-child(12)::before {
+.calendar__day:nth-child(12)::before {
   content: "12";
 }
 
-.calendar__row-block:nth-child(13)::before {
+.calendar__day:nth-child(13)::before {
   content: "13";
 }
 
-.calendar__row-block:nth-child(14)::before {
+.calendar__day:nth-child(14)::before {
   content: "14";
 }
 
-.calendar__row-block:nth-child(15)::before {
+.calendar__day:nth-child(15)::before {
   content: "15";
 }
 
-.calendar__row-block:nth-child(16)::before {
+.calendar__day:nth-child(16)::before {
   content: "16";
 }
 
-.calendar__row-block:nth-child(17)::before {
+.calendar__day:nth-child(17)::before {
   content: "17";
 }
 
-.calendar__row-block:nth-child(18)::before {
+.calendar__day:nth-child(18)::before {
   content: "18";
 }
 
-.calendar__row-block:nth-child(19)::before {
+.calendar__day:nth-child(19)::before {
   content: "19";
 }
 
-.calendar__row-block:nth-child(20)::before {
+.calendar__day:nth-child(20)::before {
   content: "20";
 }
 
-.calendar__row-block:nth-child(21)::before {
+.calendar__day:nth-child(21)::before {
   content: "21";
 }
 
-.calendar__row-block:nth-child(22)::before {
+.calendar__day:nth-child(22)::before {
   content: "22";
 }
 
-.calendar__row-block:nth-child(23)::before {
+.calendar__day:nth-child(23)::before {
   content: "23";
 }
 
-.calendar__row-block:nth-child(24)::before {
+.calendar__day:nth-child(24)::before {
   content: "24";
 }
 
-.calendar__row-block:nth-child(25)::before {
+.calendar__day:nth-child(25)::before {
   content: "25";
 }
 
-.calendar__row-block:nth-child(26)::before {
+.calendar__day:nth-child(26)::before {
   content: "26";
 }
 
-.calendar__row-block:nth-child(27)::before {
+.calendar__day:nth-child(27)::before {
   content: "27";
 }
 
-.calendar__row-block:nth-child(28)::before {
+.calendar__day:nth-child(28)::before {
   content: "28";
 }
 
-.calendar__row-block:nth-child(29)::before {
+.calendar__day:nth-child(29)::before {
   content: "29";
 }
 
-.calendar__row-block:nth-child(30)::before {
+.calendar__day:nth-child(30)::before {
   content: "30";
 }
 
-.calendar__row-block:nth-child(31)::before {
+.calendar__day:nth-child(31)::before {
   content: "31";
 }
 
-.calendar__row-block--mon {
-  margin-left: 100px;
+.calendar__day--mon {
+  margin-left: 101px;
 }
 
-.calendar__row-block--tue {
-  margin-left: 200px;
+.calendar__day--tue {
+  margin-left: 202px;
 }
 
-.calendar__row-block--wed {
-  margin-left: 200px;
+.calendar__day--wed {
+  margin-left: 202px;
 }
 
-.calendar__row-block--thu {
-  margin-left: 300px;
+.calendar__day--thu {
+  margin-left: 303px;
 }
 
-.calendar__row-block--fri {
-  margin-left: 400px;
+.calendar__day--fri {
+  margin-left: 404px;
 }
 
-.calendar__row-block--sat {
-  margin-left: 500px;
+.calendar__day--sat {
+  margin-left: 505px;
 }
 
-.calendar__row-block--sun {
-  margin-left: 600px;
+.calendar__day--sun {
+  margin-left: 606px;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Arial", sans-serif;
+  font-size: 30px;
 }
 
 /*# sourceMappingURL=styles.css.map */
