--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -1,6 +1,7 @@
-$calendar-block-square: 100px;
-$calendar-block-color: #eee;
+$calendar-day-square: 100px;
+$calendar-day-color: #eee;
 $calendar-lenght: 31;
+$calendar-margin: 1px;
 
 $start-day:
   mon 1,
