month-length modifier fix

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,7 +6,7 @@ body {
 }
 
 @for $i from 28 through 31 {
-  .calendar--month-lenght--#{$i} :nth-child(n + #{$i}) {
+  .calendar--month-length--#{$i} :nth-child(n + #{$i + 1}) {
     display: none;
   }
 }
@@ -15,7 +15,6 @@ body {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  height: 500px;
   width: $calendarWidth;
   gap: 1px;
 
