fixed number of days modifier

--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -30,7 +30,7 @@
   }
 
   @for $days from 28 through 31 {
-    &--month-lenght--#{$days} :nth-child(n + #{$days + 1}) {
+    &--month-length--#{$days} :nth-child(n + #{$days + 1}) {
       display: none;
       visibility: hidden;
     }
