fix: added missing Arial font

--- a/src/styles/utils/_variables.scss
+++ b/src/styles/utils/_variables.scss
@@ -11,7 +11,7 @@ $cell-gap: 1px;
 $padding-size: 10px;
 $calendar-width: (7 * $cell-size) + ( 6 * $cell-gap) + (2 * $padding-size);
 $cell-margin: $cell-size + $cell-gap;
-$font-arial: "", sans-serif;
+$font-arial: "Arial", sans-serif;
 $font-numbers: 30px;
 $duration: 0.5s;
 
