first day logic fixed

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,9 +1,15 @@
+$cell-color: #eee;
+$cell-color-hover: #ffc0cb;
 $cell-size: 100px;
-$border-width: 1px;
-$cell-font-size: 30px;
 $cell-padding: 10px;
-$num-font-family: arial, sans-serif;
-$color-white: #eee;
-$color-pink: pink;
-$days-in-week: 7;
-$animation-duration: 0.5s;
+$cell-in-row: 7;
+$days: (
+  "mon": 0,
+  "tue": 1,
+  "wen": 2,
+  "thu": 3,
+  "fri": 4,
+  "sat": 5,
+  "sun": 6
+);
+$gap: 1px;
