--- a/src/styles/calendar.scss
+++ b/src/styles/calendar.scss
@@ -1,62 +1,51 @@
+html {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 .calendar {
   display: flex;
   flex-wrap: wrap;
-  gap: 1px;
-  width: calc(#{$days-in-week} * #{$cell-size}
-  + (#{$days-in-week} - 1) * #{$border-width} + 2 * #{$cell-padding});
+  align-content: center;
+  gap: $gap;
+  font-size: 30px;
+  width: $cell-in-row * ($cell-size + $cell-padding);
+  margin: 100px auto;
 
   &__day {
-    width: #{$cell-size};
-    height: #{$cell-size};
-    border: #{$border-width} solid black;
-    background-color: #{$color-white};
+    box-sizing: border-box;
+    height: 100px;
+    width: 100px;
+    border: 1px solid black;
+    background-color: $cell-color;
+
     display: flex;
-    align-items: center;
     justify-content: center;
-    position: relative;
+    align-items: center;
+
     cursor: pointer;
-    font-size: #{$cell-font-size};
-    font-family: #{$num-font-family};
-    transition: transform #{$animation-duration} ease-in-out;
+    transition-duration: 0.5s;
 
-    @for $dayNumber from 1 through 31 {
-      &:nth-child(#{$dayNumber})::before {
-        content: "#{$dayNumber}";
+    &:hover {
+      background-color: $cell-color-hover;
+      transform: translateY(-20px);
+    }
+
+    @for $day from 1 through 31 {
+      &:nth-child(#{$day})::before {
+        content: "#{$day}";
       }
     }
   }
 
-  &__day:hover {
-    background-color: #{$color-pink};
-    transform: translateY(-20px);
-  }
-}
-
-$days: (
-  "mon": 1,
-  "tue": 2,
-  "wed": 3,
-  "thu": 4,
-  "fri": 5,
-  "sat": 6,
-  "sun": 7
-);
-
-@each $day, $index in $days {
-  .start-day--#{$day} {
-    .calendar__day {
-      &:nth-child(#{$index}n) {
-        margin-left: calc(#{$index - 1} * (#{$cell-size} +
-        #{$border-width} + 2 * #{$cell-padding}));
-      }
-    }
-  }
-}
-
-@for $i from 28 through 31 {
-  .calendar__month-length--#{$i} {
-    .calendar__day:nth-child(n + #{$i + 1}) {
+  @for $none_day from 28 through 31 {
+    &--month-length-#{$none_day} :nth-child(n + #{$none_day + 1}) {
       display: none;
+    }
+  }
+
+  @each $day_week, $num_week in $days {
+    &--start-day-#{$day_week} :first-child {
+      margin-left: $num_week * $cell-size + $num_week * $gap;
     }
   }
 }
